# tokenmeter

./: .gitignore  Dockerfile  INTEGRATIONS.md  INTEROP.md  README.md  ROADMAP.md  install.ps1  install.sh  layman.md  pyproject.toml
.github/: labeler.yml
.github/workflows/: ci.yml
demos/: 01_ai_app_prompt_cost.py  02_finops_model_selection.py  03_ci_budget_gate.py  04_eng_manager_prompt_library.py  05_rag_context_budget.py  06_chat_transcript_cost.py  07_context_window_guard.py  08_diff_review_cost.py  09_fewshot_tax.py  10_classifier_router.py  11_agent_step_budget.py  12_prompt_diet.py  13_rag_chunk_tuning.py  14_multi_model_portfolio.py  15_streaming_output_forecast.py  16_batch_library_audit.py  17_custom_model_pricing.py  18_json_output_pipeline.py  19_regression_guard.py  20_full_month_forecast.py  _common.py  run_all.py
deploy/: docker-compose.yml  k8s.yaml
deploy/terraform/: main.tf
docs/: ADVANCED.md  ARCHITECTURE.md  DEMOS.md  DEPLOY.md  INSTALL.md
examples/: help.txt  version.txt
integrations/: webhook.py
ports/: README.md
ports/go/: go.mod  main.go
ports/javascript/: index.js  package.json
ports/rust/: Cargo.toml
ports/rust/src/: main.rs
tests/: test_cli_edge.py  test_connect.py  test_core_edge.py  test_demos.py  test_demos_behavior.py  test_identity.py  test_smoke.py
tokenmeter/: __init__.py  __main__.py  cli.py  connect.py  core.py  mcp_server.py
tokenmeter/demos/01-basic/: SCENARIO.md  prompt.txt
tokenmeter/demos/02-rag-context/: SCENARIO.md  retrieved_context.txt
tokenmeter/tests/: test_smoke.py
(+17 files in other folders)
